First simulations done!

--- a/FD_fluid_dynamics.ipynb
+++ b/FD_fluid_dynamics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ee605227",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fe67ed6c",
    "metadata": {},
    "outputs": [],
@@ -69,55 +69,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "703dfd32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_stream_SOR(u, w, omega=1.7, max_iter=10000, tol=1e-5):\n",
+    "def update_stream_SOR(u, w, h, omega, max_iter, tol):\n",
     "    '''\n",
     "    '''\n",
-    "    N_y, N_x = u.shape() # first y then x, so if we print it out it corresponds to the figure\n",
+    "    N_y, N_x = u.shape # first y then x, so if we print it out it corresponds to the figure\n",
     "\n",
     "    for it in range(max_iter):\n",
-    "        max_res = 0.0\n",
+    "        max_r = 0.0\n",
     "        for j in range(1, N_y-1):\n",
     "            for i in range(1, N_x-1):\n",
-    "                u_new = 0.25 * (u[j+1,i] + u[j-1,i] + u[j,i+1] + u[j,i-1])\n",
+    "                u_new = 0.25 * (u[j+1,i] + u[j-1,i] + u[j,i+1] + u[j,i-1] + h*h * w[j,i])\n",
     "                r = u_new - u[j,i]\n",
     "                u[j,i] += omega * r\n",
-    "                max_r = max(max_res, abs(r))\n",
+    "                max_r = max(max_r, abs(r))\n",
     "\n",
-    "        if max_res < tol: break\n",
+    "        if max_r < tol: break\n",
     "\n",
     "    return u\n",
     "\n",
     "def update_vorticity(u, w, h, dt, Re):\n",
     "\n",
-    "    N_y, N_x = u.shape() \n",
+    "    N_y, N_x = u.shape\n",
     "    w_new = np.copy(w)\n",
     "\n",
     "    for j in range(1, N_y-1):\n",
     "        for i in range(1, N_x-1):\n",
     "            term1a = (u[j,i+1] - u[j,i-1]) * (w[j+1,i] - w[j-1,i]) \n",
     "            term1b = (u[j+1,i] - u[j-1,i]) * (w[j,i+1] - w[j,i-1])\n",
-    "            term2 = (w[j,i+1] + w[j,i-1] + w[j+1,i] + w[j-1,i] - 4*w[j,i])\n",
+    "            term2 = w[j,i+1] + w[j,i-1] + w[j+1,i] + w[j-1,i] - 4*w[j,i]\n",
     "\n",
-    "            w_new[j,i] = w[j,i] + dt/(h*h) (0.25 * (term1a - term1b) + (1/Re) * (term2))\n",
+    "            w_new[j,i] = w[j,i] + dt/(h*h) * (0.25 * (term1a - term1b) + (1/Re) * (term2))\n",
     "    \n",
     "    return w_new\n",
-    "\n",
-    "def system_evolution(h, dt, Re, T_max, grid_size, omega=1.7, vy_wall=1.0, get_pressure=False):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc87b4bb",
+   "metadata": {},
+   "source": [
+    "Now putting everything together in a function that evolves the whole system for the specified amount of steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f8f8e5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def system_evolution(h, \n",
+    "                     dt, \n",
+    "                     n_t, \n",
+    "                     Re, \n",
+    "                     grid_size, \n",
+    "                     SOR_omega=1.7, \n",
+    "                     get_pressure=False, \n",
+    "                     vx_wall=1.0, \n",
+    "                     SOR_max_iter=10000, \n",
+    "                     SOR_tol=1e-5\n",
+    "                     ):\n",
     "    '''\n",
     "    '''\n",
+    "    stability = dt/(Re*h*h)\n",
+    "    if stability > 0.25:\n",
+    "        print(f'Warning: Stability condition not met! value: {stability:.3f}')\n",
+    "    else:\n",
+    "        print(f'Stability criterion value: {stability:.3f}')\n",
+    "        \n",
     "    N_x, N_y = grid_size\n",
     "\n",
-    "    # Initialize fields\n",
-    "    u = np.zeros((N_y, N_x))  # Stream function\n",
-    "    w = np.zeros((N_y, N_x))  # Vorticity\n",
-    "    \n",
+    "    # Initialize storage arrays and arrays at t=0\n",
+    "    u_history = np.zeros((n_t, N_y, N_x)) # u at t=0 is 0\n",
+    "    w_history = np.zeros((n_t, N_y, N_x))\n",
+    "    w_history[0,-1, :] = -2 * vx_wall / h  # Top wall vorticity at t=0 (u=0 everywhere)\n",
+    "                                                                       \n",
+    "    u = u_history[0]\n",
+    "    w = w_history[0]\n",
     "\n",
-    "    "
+    "    if get_pressure: \n",
+    "        p_history = np.zeros((n_t, N_y, N_x))\n",
+    "        p = p_history[0, :, :]\n",
+    "                           \n",
+    "    for n in range(1,n_t):\n",
+    "        # Update stream function\n",
+    "        u = update_stream_SOR(u, w, h, omega=SOR_omega, max_iter=SOR_max_iter, tol=SOR_tol)\n",
+    "\n",
+    "        # vorticity boundary conditions\n",
+    "        factor = 2/(h*h)\n",
+    "        w[-1, :] = - factor * u[-2,:] - (2/h) * vx_wall # Top wall (A)\n",
+    "        w[:, -1] = - factor * u[:,-2]             # Right wall (B)\n",
+    "        w[0, :] = - factor * u[1, :]            # Bottom wall (C)\n",
+    "        w[:, 0] = - factor * u[:, 1]            # Left wall (D)\n",
+    "\n",
+    "        # Update vorticity\n",
+    "        w = update_vorticity(u, w, h, dt, Re)\n",
+    "        u_history[n] = u\n",
+    "        w_history[n] = w\n",
+    "        if get_pressure:\n",
+    "            p = np.zeros((N_y, N_x))  # Placeholder for pressure calculation\n",
+    "            p_history[n, :, :] = p\n",
+    "\n",
+    "    if get_pressure:\n",
+    "        return u_history, w_history, p_history\n",
+    "    else:\n",
+    "        return u_history, w_history"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff05512",
+   "metadata": {},
+   "source": [
+    "Let's test the function for a small grid size and a low number of time steps:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6bad310",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stability criterion value: 0.050\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.colorbar.Colorbar at 0x1b20f3fc200>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u_test, w_test = system_evolution(h=0.1, dt=0.01, n_t=100, Re=20, grid_size=(20,20),vx_wall=1)\n",
+    "\n",
+    "plt.imshow(u_test[-1], origin='lower'); plt.title(\"Stream function\")\n",
+    "plt.colorbar()\n",
+    "plt.figure()\n",
+    "plt.imshow(w_test[-1], origin='lower'); plt.title(\"Vorticity\")\n",
+    "plt.colorbar()"
    ]
   }
  ],
