Created a new version that uses a class

--- a/FD_fluid_dynamics.ipynb
+++ b/FD_fluid_dynamics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ee605227",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fe67ed6c",
    "metadata": {},
    "outputs": [],
@@ -68,118 +68,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "703dfd32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_stream_SOR(u, w, h, omega, max_iter, tol):\n",
-    "    '''\n",
-    "    '''\n",
-    "    N_y, N_x = u.shape # first y then x, so if we print it out it corresponds to the figure\n",
-    "\n",
-    "    for it in range(max_iter):\n",
-    "        max_r = 0.0\n",
-    "        for j in range(1, N_y-1):\n",
-    "            for i in range(1, N_x-1):\n",
-    "                u_new = 0.25 * (u[j+1,i] + u[j-1,i] + u[j,i+1] + u[j,i-1] + h*h * w[j,i])\n",
-    "                r = u_new - u[j,i]\n",
-    "                u[j,i] += omega * r\n",
-    "                max_r = max(max_r, abs(r))\n",
-    "\n",
-    "        if max_r < tol: break\n",
-    "\n",
-    "    return u\n",
-    "\n",
-    "def update_vorticity(u, w, h, dt, Re):\n",
-    "\n",
-    "    N_y, N_x = u.shape\n",
-    "    w_new = np.copy(w)\n",
-    "\n",
-    "    for j in range(1, N_y-1):\n",
-    "        for i in range(1, N_x-1):\n",
-    "            term1a = (u[j,i+1] - u[j,i-1]) * (w[j+1,i] - w[j-1,i]) \n",
-    "            term1b = (u[j+1,i] - u[j-1,i]) * (w[j,i+1] - w[j,i-1])\n",
-    "            term2 = w[j,i+1] + w[j,i-1] + w[j+1,i] + w[j-1,i] - 4*w[j,i]\n",
-    "\n",
-    "            w_new[j,i] = w[j,i] + dt/(h*h) * (0.25 * (term1a - term1b) + (1/Re) * (term2))\n",
-    "    \n",
-    "    return w_new\n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "dc87b4bb",
+   "id": "f85aff89",
    "metadata": {},
    "source": [
-    "Now putting everything together in a function that evolves the whole system for the specified amount of steps."
+    "ldc = LDC(h=A)\n",
+    "LDC.h = B\n",
+    "ldc.system_evolution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "f8f8e5e3",
+   "execution_count": 4,
+   "id": "64c6db81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def system_evolution(h, \n",
-    "                     dt, \n",
-    "                     n_t, \n",
-    "                     Re, \n",
-    "                     grid_size, \n",
-    "                     SOR_omega=1.7, \n",
-    "                     get_pressure=False, \n",
-    "                     vx_wall=1.0, \n",
-    "                     SOR_max_iter=10000, \n",
-    "                     SOR_tol=1e-5\n",
-    "                     ):\n",
-    "    '''\n",
-    "    '''\n",
-    "    stability = dt/(Re*h*h)\n",
-    "    if stability > 0.25:\n",
-    "        print(f'Warning: Stability condition not met! value: {stability:.3f}')\n",
-    "    else:\n",
-    "        print(f'Stability criterion value: {stability:.3f}')\n",
+    "class LDC:\n",
+    "    def __init__(self,h,dt,Re,n_t,grid_size,vx_wall):\n",
+    "        self.h = h\n",
+    "        self.dt = dt \n",
+    "        self.Re = Re\n",
+    "        self.n_t = n_t\n",
+    "        self.grid_size = grid_size\n",
+    "        self.vx_wall = vx_wall\n",
+    "        self.initalize()\n",
+    "    \n",
+    "    def initialize(self): # Careful, for changing grid_size you have to reassign the whole class\n",
+    "        self.N_y, self.N_x = self.grid_size # first y then x, so if we print it out it corresponds to the figure\n",
+    "\n",
+    "    def update_stream_SOR(self, u, w, omega, max_iter, tol):\n",
+    "        '''\n",
+    "        '''\n",
+    "\n",
+    "        for it in range(max_iter):\n",
+    "            max_r = 0.0\n",
+    "            for j in range(1, self.N_y-1):\n",
+    "                for i in range(1, self.N_x-1):\n",
+    "                    u_new = 0.25 * (u[j+1,i] + u[j-1,i] + u[j,i+1] + u[j,i-1] + self.h*self.h * w[j,i])\n",
+    "                    r = u_new - u[j,i]\n",
+    "                    u[j,i] += omega * r\n",
+    "                    max_r = max(max_r, abs(r))\n",
+    "\n",
+    "            if max_r < tol: break\n",
+    "\n",
+    "        return u\n",
+    "    \n",
+    "    def update_vorticity(self,u, w):\n",
+    "\n",
+    "        w_new = np.copy(w)\n",
+    "\n",
+    "        for j in range(1, self.N_y-1):\n",
+    "            for i in range(1, self.N_x-1):\n",
+    "                term1a = (u[j,i+1] - u[j,i-1]) * (w[j+1,i] - w[j-1,i]) \n",
+    "                term1b = (u[j+1,i] - u[j-1,i]) * (w[j,i+1] - w[j,i-1])\n",
+    "                term2 = w[j,i+1] + w[j,i-1] + w[j+1,i] + w[j-1,i] - 4*w[j,i]\n",
+    "\n",
+    "                w_new[j,i] = w[j,i] + self.dt/(self.h*self.h) * (0.25 * (term1a - term1b) + (1/self.Re) * (term2))\n",
     "        \n",
-    "    N_x, N_y = grid_size\n",
+    "        return w_new\n",
+    "    \n",
+    "    def system_evolution(self, \n",
+    "                    SOR_omega=1.7, \n",
+    "                    get_pressure=False, \n",
+    "                    SOR_max_iter=10000, \n",
+    "                    SOR_tol=1e-5\n",
+    "                    ):\n",
+    "        '''\n",
+    "        '''\n",
+    "        stability = self.dt/(self.Re*self.h*self.h)\n",
+    "        if stability > 0.25:\n",
+    "            print(f'Warning: Stability condition not met! value: {stability:.3f}')\n",
+    "        else:\n",
+    "            print(f'Stability criterion value: {stability:.3f}')\n",
     "\n",
-    "    # Initialize storage arrays and arrays at t=0\n",
-    "    u_history = np.zeros((n_t, N_y, N_x)) # u at t=0 is 0\n",
-    "    w_history = np.zeros((n_t, N_y, N_x))\n",
-    "    w_history[0,-1, :] = -2 * vx_wall / h  # Top wall vorticity at t=0 (u=0 everywhere)\n",
-    "                                                                       \n",
-    "    u = u_history[0]\n",
-    "    w = w_history[0]\n",
+    "        # Initialize storage arrays and arrays at t=0\n",
+    "        u_history = np.zeros((self.n_t, self.N_y, self.N_x)) # u at t=0 is 0\n",
+    "        w_history = np.zeros((self.n_t, self.N_y, self.N_x))\n",
+    "        w_history[0,-1, :] = -2 * self.vx_wall / self.h  # Top wall vorticity at t=0 (u=0 everywhere)\n",
+    "                                                                        \n",
+    "        u = u_history[0]\n",
+    "        w = w_history[0]\n",
     "\n",
-    "    if get_pressure: \n",
-    "        p_history = np.zeros((n_t, N_y, N_x))\n",
-    "        p = p_history[0, :, :]\n",
-    "                           \n",
-    "    for n in range(1,n_t):\n",
-    "        # Update stream function\n",
-    "        u = update_stream_SOR(u, w, h, omega=SOR_omega, max_iter=SOR_max_iter, tol=SOR_tol)\n",
+    "        if get_pressure: \n",
+    "            p_history = np.zeros((self.n_t, self.N_y, self.N_x))\n",
+    "            p = p_history[0]\n",
+    "                            \n",
+    "        for n in range(1,self.n_t):\n",
+    "            # Update stream function\n",
+    "            u = self.update_stream_SOR(u, w, self.h, omega=SOR_omega, max_iter=SOR_max_iter, tol=SOR_tol)\n",
     "\n",
-    "        # vorticity boundary conditions\n",
-    "        factor = 2/(h*h)\n",
-    "        w[-1, :] = - factor * u[-2,:] - (2/h) * vx_wall # Top wall (A)\n",
-    "        w[:, -1] = - factor * u[:,-2]             # Right wall (B)\n",
-    "        w[0, :] = - factor * u[1, :]            # Bottom wall (C)\n",
-    "        w[:, 0] = - factor * u[:, 1]            # Left wall (D)\n",
+    "            # vorticity boundary conditions\n",
+    "            factor = 2/(self.h*self.h)\n",
+    "            w[-1, :] = - factor * u[-2,:] - (2/self.h) * self.vx_wall # Top wall (A)\n",
+    "            w[:, -1] = - factor * u[:,-2]             # Right wall (B)\n",
+    "            w[0, :] = - factor * u[1, :]            # Bottom wall (C)\n",
+    "            w[:, 0] = - factor * u[:, 1]            # Left wall (D)\n",
     "\n",
-    "        # Update vorticity\n",
-    "        w = update_vorticity(u, w, h, dt, Re)\n",
-    "        u_history[n] = u\n",
-    "        w_history[n] = w\n",
+    "            # Update vorticity\n",
+    "            w = self.update_vorticity(u, w, self.h, self.dt, self.Re)\n",
+    "            u_history[n] = u\n",
+    "            w_history[n] = w\n",
+    "            if get_pressure:\n",
+    "                p = np.zeros((self.N_y, self.N_x))  # Placeholder for pressure calculation\n",
+    "                p_history[n] = p\n",
+    "\n",
     "        if get_pressure:\n",
-    "            p = np.zeros((N_y, N_x))  # Placeholder for pressure calculation\n",
-    "            p_history[n, :, :] = p\n",
-    "\n",
-    "    if get_pressure:\n",
-    "        return u_history, w_history, p_history\n",
-    "    else:\n",
-    "        return u_history, w_history"
+    "            return u_history, w_history, p_history\n",
+    "        else:\n",
+    "            return u_history, w_history\n",
+    "            \n"
    ]
   },
   {
@@ -192,30 +190,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e6bad310",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stability criterion value: 0.050\n"
+     "ename": "AttributeError",
+     "evalue": "'LDC' object has no attribute 'initalize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ldc_test \u001b[38;5;241m=\u001b[39m \u001b[43mLDC\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_t\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRe\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrid_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvx_wall\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m u_test, w_test \u001b[38;5;241m=\u001b[39m ldc_test\u001b[38;5;241m.\u001b[39msystem_evolution()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# u_test, w_test = system_evolution(h=0.1, dt=0.01, n_t=100, Re=20, grid_size=(20,20),vx_wall=1)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[4], line 9\u001b[0m, in \u001b[0;36mLDC.__init__\u001b[1;34m(self, h, dt, Re, n_t, grid_size, vx_wall)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid_size \u001b[38;5;241m=\u001b[39m grid_size\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvx_wall \u001b[38;5;241m=\u001b[39m vx_wall\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minitalize\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'LDC' object has no attribute 'initalize'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1b20f3fc200>"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "u_test, w_test = system_evolution(h=0.1, dt=0.01, n_t=100, Re=20, grid_size=(20,20),vx_wall=1)\n",
+    "ldc_test = LDC(h=0.1, dt=0.01, n_t=100, Re=20, grid_size=(20,20),vx_wall=1)\n",
+    "u_test, w_test = ldc_test.system_evolution()\n",
+    "\n",
+    "# u_test, w_test = system_evolution(h=0.1, dt=0.01, n_t=100, Re=20, grid_size=(20,20),vx_wall=1)\n",
     "\n",
     "plt.imshow(u_test[-1], origin='lower'); plt.title(\"Stream function\")\n",
     "plt.colorbar()\n",
