See you tomorrow

--- a/FD_fluid_dynamics.ipynb
+++ b/FD_fluid_dynamics.ipynb
@@ -16,9 +16,10 @@
    "metadata": {},
    "source": [
     "## To Do\n",
-    "1. Calculate Pressure\n",
-    "2. Plot the fields at time [-1]\n",
-    "3. Check code with AI."
+    "1. Check Pressure again and add Boundary conditions for pressure.\n",
+    "2. Probably remove storage of every u, w\n",
+    "3. Make Center vx part of the regular code\n",
+    "4. Plot the fields at time [-1]\n"
    ]
   },
   {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "64c6db81",
    "metadata": {},
    "outputs": [],
@@ -132,7 +133,6 @@
     "    def update_stream_SOR(self, u, w, omega, max_iter, tol):\n",
     "        '''\n",
     "        '''\n",
-    "\n",
     "        for it in range(max_iter):\n",
     "            max_r = 0.0\n",
     "            for j in range(1, self.N_y-1):\n",
@@ -148,31 +148,41 @@
     "    \n",
     "    # =====\n",
     "    def update_vorticity(self,u, w):\n",
-    "\n",
-    "        w_new = np.copy(w)\n",
-    "\n",
-    "        for j in range(1, self.N_y-1):\n",
-    "            for i in range(1, self.N_x-1):\n",
-    "                term1a = (u[j,i+1] - u[j,i-1]) * (w[j+1,i] - w[j-1,i]) \n",
-    "                term1b = (u[j+1,i] - u[j-1,i]) * (w[j,i+1] - w[j,i-1])\n",
-    "                term2 = w[j,i+1] + w[j,i-1] + w[j+1,i] + w[j-1,i] - 4*w[j,i]\n",
-    "\n",
-    "                w_new[j,i] = w[j,i] + self.dt/(self.h*self.h) * (0.25 * (term1a - term1b) + (1/self.Re) * (term2))\n",
-    "        \n",
-    "        return w_new\n",
-    "    # =====\n",
-    "    def update_vorticity(self,u, w):\n",
     "        ''' \n",
+    "        See report for equation\n",
     "        '''\n",
     "        w_new = np.copy(w)\n",
     "\n",
-    "        term1a = (u[1:-1, 2:] - u[1:-1, :-2]) * (w[2:, 1:-1] - w[:-2, 1:-1])\n",
-    "        term1b = (u[2:, 1:-1] - u[:-2, 1:-1]) * (w[1:-1, 2:] - w[1:-1, :-2])\n",
-    "        term2 = w[1:-1, 2:] + w[1:-1, :-2] + w[2:, 1:-1] + w[:-2, 1:-1] - 4 * w[1:-1, 1:-1]\n",
+    "        termA = (u[1:-1, 2:] - u[1:-1, :-2]) * (w[2:, 1:-1] - w[:-2, 1:-1])\n",
+    "        termB= (u[2:, 1:-1] - u[:-2, 1:-1]) * (w[1:-1, 2:] - w[1:-1, :-2])\n",
+    "        termC = w[1:-1, 2:] + w[1:-1, :-2] + w[2:, 1:-1] + w[:-2, 1:-1] - 4 * w[1:-1, 1:-1]\n",
     "\n",
-    "        w_new[1:-1, 1:-1] = (w[1:-1, 1:-1] + self.dt / (self.h * self.h) * (0.25 * (term1a - term1b) + (1 / self.Re) * term2))\n",
+    "        w_new[1:-1, 1:-1] = (w[1:-1, 1:-1] + self.dt / (self.h * self.h) * (0.25 * (termA - termB) + (1 / self.Re) * termC))\n",
     "\n",
     "        return w_new\n",
+    "    \n",
+    "    # =====\n",
+    "    def update_pressure_SOR(self, p, u, omega, max_iter, tol):\n",
+    "        ''' \n",
+    "        '''\n",
+    "        p_new = np.copy(p)\n",
+    "\n",
+    "        for it in range(max_iter):\n",
+    "            max_r = 0.0\n",
+    "            for j in range(1, self.N_y-1):\n",
+    "                for i in range(1, self.N_x-1):\n",
+    "                    termA = (p[j,i+1] + p[j,i-1] + p[j+1,i] + p[j-1,i])\n",
+    "                    termB = 2 * (u[j,i+1] + u[j,i-1] + u[j+1,i] + u[j-1,i] - 4*u[j,i]) \n",
+    "                    termC = 1/(8*self.h**2) * (u[j+1,i+1] - u[j-1,i+1] - u[j+1,i-1] + u[j-1,i-1])**2\n",
+    "                    p_new = (0.25) * (termA - termB - termC)\n",
+    "\n",
+    "                    r = p_new - p[j,i]\n",
+    "                    p[j,i] += omega * r\n",
+    "                    max_r = max(max_r, abs(r))\n",
+    "\n",
+    "            if max_r < tol: break\n",
+    "\n",
+    "        return p_new\n",
     "\n",
     "    # =====\n",
     "    def test_stability(self):\n",
