Final commit for the project, gif update later

--- a/FD_fluid_dynamics.ipynb
+++ b/FD_fluid_dynamics.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ee605227",
    "metadata": {},
    "outputs": [],
@@ -36,13 +36,13 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import SymLogNorm # This will be used to get a better color scale for vorticity, since it has large boundary values\n",
     "import os\n",
-    "from tqdm import tqdm\n",
+    "# from tqdm import tqdm\n",
     "from numba import njit\n",
     "\n",
     "\n",
-    "print_titles = False # Set to True for show titles in figures for standalone use, False for the report\n",
-    "tdqm_installed = True # Set to True if tqdm is installed\n",
-    "libertine_installed = True # Only set this to true if the font Linux Libertine is installed\n",
+    "print_titles = True # Set to True for show titles in figures for standalone use, False for the report\n",
+    "tdqm_installed = False # Set to True if tqdm is installed, and uncomment the line above\n",
+    "libertine_installed = False # Only set this to true if the font Linux Libertine is installed\n",
     "\n",
     "#******\n",
     "\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "64c6db81",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,25 @@
     "\n",
     "    def update_stream_SOR(self, u, w, omega, max_iter, tol):\n",
     "        '''\n",
-    "        \n",
+    "        Update stream function using Successive Over-Relaxation (SOR) method.\n",
+    "\n",
+    "        INPUT\n",
+    "        -----\n",
+    "        u: (Ny,Nx)-ndarray \n",
+    "            initial stream function\n",
+    "        w: (Ny,Nx)-ndarray\n",
+    "            vorticity\n",
+    "        omega: float\n",
+    "            relaxation factor\n",
+    "        max_iter: int\n",
+    "            maximum number of iterations\n",
+    "        tol: float\n",
+    "            tolerance for convergence\n",
+    "\n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        u: (Ny,Nx)-ndarray\n",
+    "            updated stream function\n",
     "        '''\n",
     "        for it in range(max_iter):\n",
     "            max_r = 0.0\n",
@@ -194,7 +212,19 @@
     "    # =====\n",
     "    def update_vorticity(self, w, u):\n",
     "        ''' \n",
-    "        See report for equation\n",
+    "        Update vorticity with finite differences.\n",
+    "\n",
+    "        INPUT\n",
+    "        -----\n",
+    "        w: (Ny,Nx)-ndarray\n",
+    "            initial vorticity\n",
+    "        u: (Ny,Nx)-ndarray\n",
+    "            stream function\n",
+    "\n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        w_new: (Ny,Nx)-ndarray\n",
+    "            updated vorticity\n",
     "        '''\n",
     "        w_new = np.copy(w)\n",
     "\n",
@@ -217,6 +247,26 @@
     "        We are also using red-black SOR which also improves performance and ram usage apparently (source: some guy on stackoverflow).\n",
     "\n",
     "        I also tried a version with vectorized termB and termC, but it did not change much when using numba.\n",
+    "\n",
+    "        INPUT\n",
+    "        -----\n",
+    "        p: (Ny,Nx)-ndarray \n",
+    "            initial pressure\n",
+    "        u: (Ny,Nx)-ndarray\n",
+    "            stream function\n",
+    "        h: float\n",
+    "            grid spacing\n",
+    "        omega: float\n",
+    "            relaxation factor\n",
+    "        max_iter: int\n",
+    "            maximum number of iterations\n",
+    "        tol: float\n",
+    "            tolerance for convergence   \n",
+    "\n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        p: (Ny,Nx)-ndarray\n",
+    "            updated pressure\n",
     "        '''\n",
     "        N_y, N_x = p.shape\n",
     "        factorC = 1/(8*h**2)\n",
@@ -294,6 +344,21 @@
     "    \n",
     "    # =====\n",
     "    def vorticity_boundary(self, w, u):\n",
+    "        '''\n",
+    "        Apply boundary conditions for vorticity.\n",
+    "        \n",
+    "        INPUT\n",
+    "        -----\n",
+    "        w: (Ny,Nx)-ndarray\n",
+    "            initial vorticity\n",
+    "        u: (Ny,Nx)-ndarray\n",
+    "            stream function\n",
+    "            \n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        w: (Ny,Nx)-ndarray\n",
+    "            updated vorticity with boundary conditions applied\n",
+    "        '''\n",
     "        factor = 2/(self.h*self.h)\n",
     "        w[-1, :] = - factor * u[-2,:] - (2/self.h) * self.vx_top    # Top wall (A)\n",
     "        w[:, -1] = - factor * u[:,-2]                               # Right wall (B)\n",
@@ -305,7 +370,18 @@
     "    # =====\n",
     "    def pressure_boundary(self, p, w):\n",
     "        ''' \n",
-    "        \n",
+    "        Apply boundary conditions for pressure.\n",
+    "        INPUT\n",
+    "        -----\n",
+    "        p: (Ny,Nx)-ndarray\n",
+    "            initial pressure\n",
+    "        w: (Ny,Nx)-ndarray\n",
+    "            vorticity   \n",
+    "\n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        p: (Ny,Nx)-ndarray\n",
+    "            updated pressure with boundary conditions applied\n",
     "        '''  \n",
     "        # (A) top wall\n",
     "        for i in range(self.N_x-2):\n",
@@ -325,6 +401,9 @@
     "\n",
     "    # =====\n",
     "    def test_stability(self):\n",
+    "        '''\n",
+    "        Test stability condition for the simulation.\n",
+    "        '''\n",
     "        stability = self.dt/(self.Re*self.h*self.h)\n",
     "        if stability > 0.25:\n",
     "            print(f'Warning: Stability condition not met! value: {stability:.3f}')\n",
@@ -335,6 +414,19 @@
     "    \n",
     "    # =====       \n",
     "    def get_vx_center(self, u):\n",
+    "        '''\n",
+    "        Get x-velocity at the center of the cavity.\n",
+    "\n",
+    "        INPUT\n",
+    "        -----\n",
+    "        u: (Ny,Nx)-ndarray\n",
+    "            stream function\n",
+    "\n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        vx_center: float\n",
+    "            x-velocity at the center of the cavity\n",
+    "        '''\n",
     "        i = int(self.N_x/2)\n",
     "        j = int(self.N_y/2)\n",
     "        return (u[j,i+1] - u[j,i-1])/(2*self.h) \n",
@@ -348,6 +440,30 @@
     "                    SOR_tol=1e-5,\n",
     "                    ):\n",
     "        '''\n",
+    "        Simulate the time evolution of the lid-driven cavity flow.\n",
+    "        INPUT\n",
+    "        -----\n",
+    "        n_t: int\n",
+    "            number of time steps\n",
+    "        get_pressure: bool\n",
+    "            toggle to compute and return the pressure field\n",
+    "        SOR_omega: float\n",
+    "            relaxation factor for SOR\n",
+    "        SOR_max_iter: int\n",
+    "            maximum number of iterations for SOR\n",
+    "        SOR_tol: float\n",
+    "            tolerance for SOR\n",
+    "\n",
+    "        OUTPUT\n",
+    "        ------\n",
+    "        u: (Ny,Nx)-ndarray\n",
+    "            stream function at final time step\n",
+    "        w: (Ny,Nx)-ndarray\n",
+    "            vorticity at final time step\n",
+    "        p: (Ny,Nx)-ndarray, optional\n",
+    "            pressure at final time step (only if get_pressure is True)\n",
+    "        vxc_history: (n_t,)-ndarray\n",
+    "            history of x-velocity at the center of the cavity over time\n",
     "        '''\n",
     "        self.test_stability()\n",
     "\n",
@@ -510,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0ae0f387",
    "metadata": {},
    "outputs": [
@@ -561,7 +677,7 @@
     }
    ],
    "source": [
-    "save_data = True\n",
+    "save_data = False\n",
     "smallest_dt = True # This sets the time step to dt(Re=10) for all three!\n",
     "T = 25 # Fix the total amount of time for Re=100 and Re=200\n",
     "grid_size = (100,100)\n",
@@ -829,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "669f446b",
    "metadata": {},
    "outputs": [
@@ -880,7 +996,7 @@
     }
    ],
    "source": [
-    "save_data = True\n",
+    "save_data = False\n",
     "smallest_dt = True # This sets the time step to dt(Re=10) for all three\n",
     "T = 25 # Fix the total amount of time for Re=100 and Re=200. Re=10 is quickly in steady state.\n",
     "grid_size = (100,100)\n",
@@ -1141,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b23067eb",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1308,7 @@
     }
    ],
    "source": [
-    "save_data = True\n",
+    "save_data = False\n",
     "smallest_dt = True # This sets the time step to dt(Re=10) for all three\n",
     "T = 25 # Fix the total amount of time for Re=100 and Re=200. Re=10 is quickly in steady state.\n",
     "grid_size = (100,100)\n",
